helm/deployment/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api-svc
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
